# ActiveML_miniproject

./: .gitignore  PCA_analysis.py  data_analysis.ipynb  dataloading.py  main.py  plots.py  pyproject.toml  run_model_iterations.py  sampling.ipynb  statistical_tests.ipynb  utils.py
results/: even_class_accuracy.csv  even_total_accuracy.csv  uneven_class_accuracy.csv  uneven_total_accuracy.csv
